# book-library

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: __init__.py  default.py  utils.py
app/db/: __init__.py
app/db/connection/: __init__.py  session.py
app/db/migrator/: env.py
app/db/migrator/versions/: 4a3d41e94684_add_genre.py  b9e3fdb58b81_add_publishers.py  f3ba3e4eb0cd_.py
app/db/models/: __init__.py  base.py  genre.py  publisher.py
app/schemas/: __init__.py  genre.py  ping.py  publisher.py
app/utils/database/: genres.py  publishers.py
app/utils/service/: genres.py  publishers.py
app/views/: __init__.py  genres.py  health_check.py  publishers.py
docs/: genre.yaml  publisher.yaml
tests/: conftest.py  utils.py
tests/views/: test_health_check.py
tests/views/genres/: __init__.py  test_create_genre_v1.py  test_delete_genre_v1.py  test_get_genre_details_v1.py  test_get_list_of_genres_v1.py  test_update_genre_v1.py  utils.py
tests/views/publishers/: __init__.py  test_create_publishers_v1.py  utils.py
