[tool.poetry]
name = "book-library"
version = "0.1.0"
description = ""
authors = ["dara666 <daraabbb@icloud.com>"]
readme = "README.md"
packages = [{include = "book_library"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.103.0"
uvicorn = "^0.22.0"
pytest = "^7.3.1"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"
flake8 = "^6.0.0"
black = "^23.3.0"
unify = "^0.5"
sqlalchemy = "^2.0.20"
pydantic = "1.10.12"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.3"
configargparse = "^1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
